# emerald-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
audio/: Cargo.toml  README.md
audio/examples/: inspect.rs
audio/src/: data.rs  engine.rs  lib.rs
backends/: Cargo.toml  README.md
backends/src/: audio_cpal.rs  audio_web.rs  headless.rs  macroquad.rs  save_web.rs
docs/: audio-engine.md
game/: Cargo.toml  README.md
game/src/: bake.rs  data.rs  lib.rs  map.rs  player.rs  ui.rs
musicgen/: Cargo.toml  README.md
musicgen/src/: main.rs
types/: Cargo.toml  README.md
types/src/: lib.rs
web/: README.md  build.sh  index.html
worldgen/: Cargo.toml  README.md
worldgen/src/: main.rs
