[package]
name = "backends"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Backend adapters. One file per adapter; each owns the loop. Swap = add/replace one file."

[features]
default = ["macroquad"]
macroquad = ["dep:macroquad"]

[dependencies]
types = { path = "../types" }
game = { path = "../game" }
audio = { path = "../audio" }
macroquad = { version = "0.4", optional = true }

# native audio adapter; the web build uses a WebAudio adapter instead
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.16"

# first Backend adapter; owns the loop, draws the quads
[[bin]]
name = "emerald"
path = "src/macroquad.rs"
required-features = ["macroquad"]

# stub second backend: proves the swap really is one file (no graphics crate at all)
[[bin]]
name = "emerald-headless"
path = "src/headless.rs"
