# The music extractor: reads a pret/pokeemerald clone, writes assets/music/
# (the MusicPack format defined once in audio/src/data.rs — shared types, no
# format spec to drift). From-scratch replacement for the old three-program
# Python pipeline; emits RAW voicegroups/keysplits/drumsets for the engine's
# runtime resolution, never a pre-flattened (program,key)->voice map.
# Build-time tool only; zero dependencies beyond std + the shared types.

[package]
name = "musicgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
audio = { path = "../audio" }
